--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .stats-container {
     display: flex;
+    align-items: center;
 }
 
 .stats-card {
@@ -42,6 +43,27 @@ body {
     justify-content: space-around;
 }
 
+#search-bar-container {
+    text-align: center;
+    margin: 1%;
+}
+
+#search-bar {
+    width: 50%;
+    border-radius: 7px;
+    border: none;
+    padding: 1%;
+    font-size: 20px;
+}
+
+#description-container {
+    font-size: 20px;
+}
+
+#game-check {
+    font-size: 20px;
+}
+
 .game-img {
     width: 100%;
     border-radius: 5px;
@@ -58,6 +80,11 @@ body {
 }
 
 .game-card:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
+
+.stats-container:hover {
     cursor: pointer;
     box-shadow: 0 0 30px lightblue;
 }
